<resources>
    <string name="app_name">Calculator</string>
    <string name="number_7">7</string>
    <string name="number_4">4</string>
    <string name="number_1">1</string>
    <string name="number_0">0</string>
    <string name="number_8">8</string>
    <string name="number_5">5</string>
    <string name="number_2">2</string>
    <string name="reset">AC</string>
    <string name="number_9">9</string>
    <string name="number_6">6</string>
    <string name="number_3">3</string>
    <string name="equals">=</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="addition">+</string>
    <string name="minus">-</string>
    <string name="settings_activity">Settings</string>
    <string name="text_view_dark_theme">Включить ночную тему</string>
    <string name="back_to_main_activity">Вернуться обратно</string>
</resources>