<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_pic"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="48sp"
            tools:text="324543" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:rowCount="4">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_7"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_4"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_0"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_8"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_5"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_2"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/common"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_9"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_6"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_numbers"
                android:text="@string/number_3"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_operation"
                android:text="@string/equals"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_operation"
                android:text="@string/multiply"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_operation"
                android:text="@string/division"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_operation"
                android:text="@string/addition"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/button_for_operation"
                android:text="@string/minus"
                android:textSize="28sp" />

        </GridLayout>

    </LinearLayout>


</FrameLayout>